# nnlm

./: .gitignore  LICENSE  README.md  nnlm.cabal  stack.yaml
app/: Main.hs
src/: Perceptron.hs
test/: Spec.hs
