name:                nnlm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/monadegmailcom/nnlm#readme
license:             BSD3
license-file:        LICENSE
author:              monade
maintainer:          monade@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perceptron
  build-depends:       base >= 4.7 && < 5,
                       vector
  default-language:    Haskell2010

executable nnlm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nnlm
  default-language:    Haskell2010

test-suite nnlm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nnlm
                     , hspec
                     , QuickCheck
                     , random
                     , vector
                     
-- brew install gnuplot --with-x11
                     , easyplot
-- does not build                      , hs-gchart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/monadegmailcom/nnlm
